Restored Java 8 compatibility (Fixes #809)